# ukey2

./: .bazelrc  .gitignore  .gitmodules  Android.bp  BUILD  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  build.gradle
src/jmh/java/com/google/security/cryptauth/lib/securegcm/: Ukey2Benchmark.java
src/main/cpp/: BUILD.bazel  CMakeLists.txt
src/main/cpp/include/securegcm/: d2d_connection_context_v1.h  d2d_crypto_ops.h  java_util.h  ukey2_handshake.h
src/main/cpp/src/securegcm/: CMakeLists.txt  d2d_connection_context_v1.cc  d2d_crypto_ops.cc  java_util.cc  ukey2_handshake.cc  ukey2_shell.cc
src/main/cpp/test/securegcm/: d2d_crypto_ops_test.cc
src/main/javatest/com/google/security/cryptauth/lib/securegcm/: Ukey2ShellCppWrapper.java
src/main/proto/: BUILD  device_to_device_messages.proto  securegcm.proto
src/securemessage/: BUILD.bazel
src/securemessage/include/securemessage/: byte_buffer.h  crypto_ops.h  public_key_proto_util.h  raw_secure_message_parser.h  secure_message_builder.h  secure_message_parser.h  secure_message_wrapper.h  util.h
src/securemessage/src/securemessage/: byte_buffer.cc  crypto_ops.cc  crypto_ops_openssl.cc  public_key_proto_util.cc  raw_secure_message_parser.cc  secure_message_builder.cc  secure_message_parser.cc  secure_message_wrapper.cc  util.cc
src/securemessage/test/securemessage/: builder_parser_test.cc  crypto_ops_test.cc  public_key_proto_util_test.cc  secure_message_parser_test.cc  secure_message_wrapper_test.cc
